Page overflows and footer size fixed

--- a/public/about.css
+++ b/public/about.css
@@ -19,5 +19,6 @@
 @media only screen and (max-width: 650px) {
   .about_container {
     width: 100vw;
+    overflow-y: scroll;
   }
 }
