--- a/public/app.css
+++ b/public/app.css
@@ -10,7 +10,9 @@
 @media only screen and (max-width: 650px) {
   .app_container {
     width: 100vw;
+    overflow-y: scroll;
   }
+
 }
 
 
